--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1,49 +1,41 @@
-body{
-	color:rgba(153, 28, 28, 0.616);
-}
-.menu-1{
-	height: 60px;
-	background: #444;
-}
-.slider-1, .slider-2, .slider-3, .slider-4, .slider-5{
-	height: 100vh;
-	text-align: center;
-}
-.slider-1{
-	background-image: url(../img/fond.jpg)
-}
-.slider-2{
-	background:rgba(153, 96, 96, 0.616);
-}
-.slider-3{
-	background:rgba(99, 130, 134, 0.5)
-}
-.slider-4{
-	background:rosybrown;
-}
-.slider-5{
-	background: #b9d479;
-}
-.footer{
-	background: #444;
-	color:#fff;
-	text-align: center;
-	padding: 10px;
+/*!
+ * Bootstrap v4.3.1 (https://getbootstrap.com/)
+ * Copyright 2011-2019 The Bootstrap Authors
+ * Copyright 2011-2019 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ */
+:root {
+  --blue: #007bff;
+  --indigo: #6610f2;
+  --purple: #6f42c1;
+  --pink: #e83e8c;
+  --red: #dc3545;
+  --orange: #fd7e14;
+  --yellow: #ffc107;
+  --green: #28a745;
+  --teal: #20c997;
+  --cyan: #17a2b8;
+  --white: #fff;
+  --gray: #6c757d;
+  --gray-dark: #343a40;
+  --primary: #007bff;
+  --secondary: #6c757d;
+  --success: #28a745;
+  --info: #17a2b8;
+  --warning: #ffc107;
+  --danger: #dc3545;
+  --light: #f8f9fa;
+  --dark: #343a40;
+  --breakpoint-xs: 0;
+  --breakpoint-sm: 576px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 992px;
+  --breakpoint-xl: 1200px;
+  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
-.texto {
-	width: calc(100vw - 20px);
-   height: 100vh;
-   font-size: 150px;
-   font-weight: 400;
-   font-family: 'Noto Serif', serif;
-   font-style: italic;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   color:#000;
-   mix-blend-mode: multiply;
-}
+*,
 *::before,
 *::after {
   box-sizing: border-box;
@@ -10047,7 +10039,6 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 
-#cargando {
-   display: none;
-}
 
+
+/*# sourceMappingURL=bootstrap.css.map */
