--- a/css/maquillaje.css
+++ b/css/maquillaje.css
@@ -16,20 +16,21 @@ body{
 	background:rgba(153, 96, 96, 0.616);
 }
 .slider-3{
-	background:rgba(99, 130, 134, 0.5)
+	background:rgba(153, 96, 96, 0.616);
 }
 .slider-4{
-	background:rosybrown;
+	background:rgba(153, 96, 96, 0.616);
 }
 .slider-5{
-	background: #b9d479;
+	background: rgba(153, 96, 96, 0.616);
 }
 .footer{
-	background: #444;
+	background: rgb(223, 118, 118);
 	color:#fff;
 	text-align: center;
 	padding: 10px;
 }
+
 
 .texto {
 	width: calc(100vw - 20px);
